--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="landing-page">
     <header>
         <div class="logo">
-<a href="#"><img src="./images/logo-single-removebg-preview.png" alt="logo"></a>
+<a href="#"><img src="logo-single-removebg-preview.png" alt="logo"></a>
         </div>
         <nav>
             <ul>
@@ -54,7 +54,7 @@
             
             <div class="carousel">
                 <div class="carousel-item active">
-                    <img src="./images/man-with-vr-glasses-experiencing-metaverse_23-2150904766.jpg" alt="Slide 1">
+                    <img src="man-with-vr-glasses-experiencing-metaverse_23-2150904766.jpg" alt="Slide 1">
                     <div class="carousel-caption">
                         <div class="server-on">
                             <div class="blinker"></div>
@@ -79,7 +79,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./images/men-with-bikes-summer-versus-winter_23-2150457452.jpg" alt="Slide 2">
+                    <img src="men-with-bikes-summer-versus-winter_23-2150457452.jpg" alt="Slide 2">
                     <div class="carousel-caption">
                         <div class="server-on">
                             <div class="blinker"></div>
@@ -105,7 +105,7 @@
                 </div>
 
                 <div class="carousel-item">
-                    <img src="./images/city-with-planet-middle_188544-8837.jpg" alt="Slide 3" class="scifi-city-image">
+                    <img src="city-with-planet-middle_188544-8837.jpg" alt="Slide 3" class="scifi-city-image">
                     <div class="carousel-caption">
                         <div class="server-on">
                             <div class="blinker"></div>
@@ -131,7 +131,7 @@
                 </div>
 
                 <div class="carousel-item">
-                    <img src="./images/portrait-fantastic-warriors-hightech-futuristic-man-from-future_158863-9300.jpg" alt="Slide 4">
+                    <img src="portrait-fantastic-warriors-hightech-futuristic-man-from-future_158863-9300.jpg" alt="Slide 4">
                     <div class="carousel-caption">
                         <div class="server-on">
                             <div class="blinker"></div>
@@ -156,7 +156,7 @@
                     </div>
                 
                         <div class="carousel-item">
-                            <img src="./images/grid/minecraft-running-steve-character-s2kxfahyg30sob8q.webp" alt="Slide 5">
+                            <img src="minecraft-running-steve-character-s2kxfahyg30sob8q.webp" alt="Slide 5">
                             <div class="carousel-caption">
                                 <div class="server-on">
                                     <div class="blinker"></div>
@@ -181,7 +181,7 @@
                     </div>
 
                     <div class="carousel-item">
-                        <img src="./images/grid/tomb_raider.jpeg" alt="Slide 5">
+                        <img src="grid/tomb_raider.jpeg" alt="Slide 5">
                         <div class="carousel-caption">
                             <div class="server-on">
                                 <div class="blinker"></div>
@@ -282,7 +282,7 @@
     </div>
     <div class="games-grid-container">  
         <div class="game-box">
-            <img src="./images/incredible-major-steampunk-balloon-floating-water-surface-illustrations-generative-ai_1258-150774.avif" alt="..">
+            <img src="incredible-major-steampunk-balloon-floating-water-surface-illustrations-generative-ai_1258-150774.avif" alt="..">
             <div class="game-text">
                 div.price-tag
                 <h4>Skyborne Odyssey</h4>
@@ -294,7 +294,7 @@
         </div>
 
         <div class="game-box"> 
-            <img src="./images/grid/Minecraft_Dungeons.avif" alt="..">
+            <img src="Minecraft_Dungeons.avif" alt="..">
             <div class="game-text">
                 <h4>Minecraft Dungeons</h4>
                 <p>Starting at <span class="price-highlight">$14.99</span></p>
@@ -305,7 +305,7 @@
         </div>
 
         <div class="game-box"> 
-            <img src="./images/grid/MinecraftMarketplace_JurassicWorld_NetBlogEditorial_277x277.avif" alt="..">
+            <img src="MinecraftMarketplace_JurassicWorld_NetBlogEditorial_277x277.avif" alt="..">
             <div class="game-text">
                 <h4>Minecraft Jurassic <br>World</h4>
                 <p>Starting at <span class="price-highlight">$14.99</span></p>
@@ -316,7 +316,7 @@
         </div>
 
         <div class="game-box"> 
-            <img src="./images/grid/XDefiant_game_info-boxart_464x608.avif" alt="..">
+            <img src="XDefiant_game_info-boxart_464x608.avif" alt="..">
             <div class="game-text">
                 <h4>XDefiant</h4>
                 <p>Starting at <span class="price-highlight">$14.99</span></p>
@@ -327,7 +327,7 @@
         </div>
 
         <div class="game-box"> 
-            <img src="./images/grid/gtavi.jpg" alt="..">
+            <img src="gtavi.jpg" alt="..">
             <div class="game-text">
                 <h4>GTA VI</h4>
                 <p>Starting at <span class="price-highlight">$14.99</span></p>
@@ -338,7 +338,7 @@
         </div>
 
         <div class="game-box"> 
-            <img src="./images/grid/9oKyhaUOZTJYI6Pk6yNPKvGS.webp" alt="..">
+            <img src="9oKyhaUOZTJYI6Pk6yNPKvGS.webp" alt="..">
             <div class="game-text">
                 <h4>DayZ</h4>
                 <p>Starting at <span class="price-highlight">$14.99</span></p>
@@ -349,7 +349,7 @@
         </div>
 
         <div class="game-box"> 
-            <img src="./images/grid/rust-game-pictures-fvem7wo2c4nc4rfq.webp" alt="..">
+            <img src="rust-game-pictures-fvem7wo2c4nc4rfq.webp" alt="..">
             <div class="game-text">
                 <h4>Rust</h4>
                 <p>Starting at <span class="price-highlight">$14.99</span></p>
@@ -360,7 +360,7 @@
         </div>
 
         <div class="game-box"> 
-            <img src="./images/grid/anno-1800.jpg" alt="..">
+            <img src="anno-1800.jpg" alt="..">
             <div class="game-text">
                 <h4>ANNO 1800</h4>
                 <p>Starting at <span class="price-highlight">$14.99</span></p>
@@ -376,7 +376,7 @@
 
 <div id="locations">
     <div class="server-image">
-        <img src="./images/cosmic-space-with-colorful-laser-lights-perfect-digital-wallpaper_181624-24943.avif" alt="..">
+        <img src="cosmic-space-with-colorful-laser-lights-perfect-digital-wallpaper_181624-24943.avif" alt="..">
     </div>
 <div class="server-sect-text">
     <div class="server-intro">
@@ -436,7 +436,7 @@
         </div>
         <div class="profile">
             <div class="customer-img">
-            <img src="./images/customers/team9.png" alt="..">
+            <img src="customers/team9.png" alt="..">
             </div>
             <p>Bryan O.</p>
         </div>
@@ -453,7 +453,7 @@
         </div>
         <div class="profile">
             <div class="customer-img">
-            <img src="./images/customers/team6.png" alt="..">
+            <img src="customers/team6.png" alt="..">
             </div>
             <p>Michael S.</p>
         </div>
@@ -470,7 +470,7 @@
         </div>
         <div class="profile">
             <div class="customer-img">
-            <img src="./images/customers/team7.png" alt="..">
+            <img src="customers/team7.png" alt="..">
             </div>
             <p>Richard L.</p>
         </div>
@@ -484,7 +484,7 @@
 <!--CONTACT-->
 <div id="contact">
     <div class="logo">
-        <a href="#"><img src="./images/logo-single-removebg-preview.png" alt="logo"></a>
+        <a href="#"><img src="logo-single-removebg-preview.png" alt="logo"></a>
         <p>Lorem ipsum dolor insut pur laro vaire dolor minim in pariatur in deserrunt laboris eu pariatur labore excepteur cupidata cupidataa duis dolor in. Indeint bet bushi dattebayo foe do evbir yuxit defitz.</p>
     </div>
     <div class="others">
@@ -522,7 +522,7 @@
     <h4>Follow Us on</h4>
     <div class="icon-container">
     <div class="icon">
-        <a href="https;//facebook.com"><img src="./images/icons/facebook.svg" alt=""></a>
+        <a href="https;//facebook.com"><img src="facebook.svg" alt=""></a>
     </div>
     <div class="icon">
        <a href="https://twitter.com"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0,0,256,256">
@@ -531,7 +531,7 @@
            </a>
     </div>
     <div class="icon">
-        <a href="youtube.com"><img src="./images/icons/youtube.svg" alt=""></a>
+        <a href="youtube.com"><img src="youtube.svg" alt=""></a>
     </div>
     <div class="icon">
         <a href="https://discord.com">
