--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
         </div>
         <div class="profile">
             <div class="customer-img">
-            <img src="customers/team9.png" alt="..">
+            <img src="./team9.png" alt="..">
             </div>
             <p>Bryan O.</p>
         </div>
@@ -453,7 +453,7 @@
         </div>
         <div class="profile">
             <div class="customer-img">
-            <img src="customers/team6.png" alt="..">
+            <img src="./team6.png" alt="..">
             </div>
             <p>Michael S.</p>
         </div>
@@ -470,7 +470,7 @@
         </div>
         <div class="profile">
             <div class="customer-img">
-            <img src="customers/team7.png" alt="..">
+            <img src="./team7.png" alt="..">
             </div>
             <p>Richard L.</p>
         </div>
