--- a/index.html
+++ b/index.html
@@ -284,7 +284,9 @@
         <div class="game-box">
             <img src="incredible-major-steampunk-balloon-floating-water-surface-illustrations-generative-ai_1258-150774.avif" alt="..">
             <div class="game-text">
-                div.price-tag
+                <div class="price-tag">
+                    20%
+                </div>
                 <h4>Skyborne Odyssey</h4>
                 <p>Starting at <span class="price-highlight">$14.99</span></p>
             </div>
