--- a/index.html
+++ b/index.html
@@ -298,6 +298,9 @@
         <div class="game-box"> 
             <img src="Minecraft_Dungeons.avif" alt="..">
             <div class="game-text">
+                <div class="price-tag">
+                    20%
+                </div>
                 <h4>Minecraft Dungeons</h4>
                 <p>Starting at <span class="price-highlight">$14.99</span></p>
             </div>
@@ -309,6 +312,9 @@
         <div class="game-box"> 
             <img src="MinecraftMarketplace_JurassicWorld_NetBlogEditorial_277x277.avif" alt="..">
             <div class="game-text">
+                <div class="price-tag">
+                    20%
+                </div>
                 <h4>Minecraft Jurassic <br>World</h4>
                 <p>Starting at <span class="price-highlight">$14.99</span></p>
             </div>
@@ -320,6 +326,9 @@
         <div class="game-box"> 
             <img src="XDefiant_game_info-boxart_464x608.avif" alt="..">
             <div class="game-text">
+                <div class="price-tag">
+                    30%
+                </div>
                 <h4>XDefiant</h4>
                 <p>Starting at <span class="price-highlight">$14.99</span></p>
             </div>
@@ -331,6 +340,9 @@
         <div class="game-box"> 
             <img src="gtavi.jpg" alt="..">
             <div class="game-text">
+                <div class="price-tag">
+                    15%
+                </div>
                 <h4>GTA VI</h4>
                 <p>Starting at <span class="price-highlight">$14.99</span></p>
             </div>
@@ -353,6 +365,9 @@
         <div class="game-box"> 
             <img src="rust-game-pictures-fvem7wo2c4nc4rfq.webp" alt="..">
             <div class="game-text">
+                <div class="price-tag">
+                    20%
+                </div>
                 <h4>Rust</h4>
                 <p>Starting at <span class="price-highlight">$14.99</span></p>
             </div>
@@ -364,6 +379,9 @@
         <div class="game-box"> 
             <img src="anno-1800.jpg" alt="..">
             <div class="game-text">
+                <div class="price-tag">
+                    25%
+                </div>
                 <h4>ANNO 1800</h4>
                 <p>Starting at <span class="price-highlight">$14.99</span></p>
             </div>
