--- a/index.html
+++ b/index.html
@@ -354,6 +354,9 @@
         <div class="game-box"> 
             <img src="9oKyhaUOZTJYI6Pk6yNPKvGS.webp" alt="..">
             <div class="game-text">
+                <div class="price-tag">
+                    20%
+                </div>
                 <h4>DayZ</h4>
                 <p>Starting at <span class="price-highlight">$14.99</span></p>
             </div>
