--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
 
 <!-- Meta Tags Generated with https://metatags.io -->
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/element-icons@2.14.1/font-awesome/css/font-awesome.min.css">
+
 </head>
 <body>
     <div class="landing-page">
@@ -181,7 +184,7 @@
                     </div>
 
                     <div class="carousel-item">
-                        <img src="grid/tomb_raider.jpeg" alt="Slide 5">
+                        <img src="tomb_raider.jpeg" alt="Slide 5">
                         <div class="carousel-caption">
                             <div class="server-on">
                                 <div class="blinker"></div>
@@ -208,8 +211,8 @@
 
                 </div>
             </div>
-            <button class="prev-button" onclick="changeSlide(-1)">⮈</button>
-            <button class="next-button" onclick="changeSlide(1)">⮊</button>
+            <button class="prev-button" onclick="changeSlide(-1)">&#x2039</button>
+            <button class="next-button" onclick="changeSlide(1)">&rsaquo;</button>
         </div>
         
         <div class="under-wave">
